# prototype-cpp-nethost

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  VERSION  conanfile.txt  prototype_cpp_nethost_version.h.in
cmake/: CppCheck.cmake  DefaultCompilerDefinitions.cmake  DefaultMsvcLinkOptions.cmake  DefaultWin32CompilerDefinitions.cmake  FindNetHostFxr.cmake  InvokeConanToolchain.cmake  PrototypeCppNethostOptions.cmake  PrototypeCppNethostToolchain.cmake  SetCompilerProperties.cmake  StandardOptions.cmake  Utilities.cmake
cmake/Msvc/: DefaultCompilerDefinitions.cmake  DefaultCompilerOptions.cmake
conan_profiles/: linux-x64-debug  linux-x64-release  linux-x86-debug  linux-x86-release  windows-x64-debug  windows-x64-release  windows-x86-debug  windows-x86-release
host_proxy/: CMakeLists.txt
host_proxy/src/: Bootstrap.cs  CMakeLists.txt  HostProxy.cs  IModule.cs  IModuleInfo.cs  ManagedDelegates.cs  ManagedProxy.cs  Module.cs  NativeApi.cs  NativeDelegates.cs  NativeUtilities.cs
hosted_module/: CMakeLists.txt
hosted_module/src/: CMakeLists.txt  Module.cs  ModuleInfo.cs
include/prototype_cpp_nethost/: dotnet_host_loader.h  dotnet_host_proxy.h  native_host_proxy.h  prototype_cpp_nethost.h  prototype_cpp_nethost_version.h
src/: CMakeLists.txt  prototype_cpp_nethost.cpp
